--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Coderhood 01</title>
 </head>
 <body>
-    
+    <p> HOLA MUNDOOO
+<!-- aprendiendo las teclas, esta es ctrl + la tecla arriba del enter, creo -->
+</p>
 </body>
 </html>
