--- a/index.html
+++ b/index.html
@@ -1,14 +1,70 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coderhood 01</title>
 </head>
+
 <body>
-    <p> HOLA MUNDOOO
-<!-- aprendiendo las teclas, esta es ctrl + la tecla arriba del enter, creo -->
-</p>
+    <!-- ESTRUCTURA DE HTML -->
+    <!-- los < es cpm alt + 60 y > con alt + 62 -->
+    <!-- aprendiendo las teclas, esta es ctrl + la tecla arriba del enter, creo -->
+    <header>
+        <p> ENCABEZADO </p>
+    </header>
+
+    <!-- BARRA DE NAVEGACION -->
+    <nav>
+        <ul>
+            <li><a href="#">Inicio</a></li>
+            <li><a href="#">Nuestro equipo</a></li>
+            <li><a href="#">Proyectos</a></li>
+            <li><a href="#">Contacto</a></li>
+        </ul>
+
+        <!-- Un formulario de búsqueda es una forma no-lineal de hacer búsquedas en un sitio web. -->
+
+        <form>
+            <input type="search" name="q" placeholder="Buscar">
+            <input type="submit" value="¡Vamos!">
+        </form>
+    </nav>
+
+
+
+    <main> empieza el contenido principal
+
+        <article>
+            <h1> Coderhood </h1>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae, sit mollitia. Consequuntur
+                doloribus rerum
+
+                enim labore eum earum dignissimos fugiat eius repellendus et, consectetur maiores neque rem, possimus
+                perferendis obcaecati.</p>
+        </article>
+
+        <!-- contenido aparte - del lado izquierdo -->
+
+        <aside>
+            <h2> Del lado izquierdo de la página</h2>
+            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, eos repellendus ex pariatur illo
+                voluptatum provident, possimus animi, tenetur et autem voluptatem fugit expedita rerum iusto totam
+                laborum aliquid facilis!
+                Ad est reiciendis alias. Aliquid libero, dolore nisi maxime ipsa nihil rem soluta dolorum, vitae qui
+                praesentium tenetur. Corporis repellat error dolore temporibus ipsum pariatur provident reiciendis sit
+                recusandae fuga! </p>
+        </aside>
+    </main>
+
+    <!-- Pie de la página -->
+    <footer>
+        <p>©Copyright 2050 de nadie. Todos los derechos revertidos.</p>
+    </footer>
+
+
 </body>
+
 </html>
